--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 2.7.1+8
 
 environment:
   sdk: ^3.9.2
@@ -62,6 +62,9 @@ dependencies:
   
   # Google Fonts
   google_fonts: ^6.2.1
+  
+  # Audio
+  audioplayers: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -89,6 +92,8 @@ flutter:
   assets:
     - assets/images/
     - assets/cards/
+    - assets/audio/bgm/
+    - assets/audio/sfx/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
