--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,9 +47,13 @@ dependencies:
   firebase_core: 3.6.0
   cloud_firestore: 5.4.3
   firebase_auth: 5.3.1
+  firebase_storage: 12.3.2
   
   # Google Sign In
   google_sign_in: 6.2.2
+  
+  # HTTP Client
+  http: 1.5.0
   
   # AdMob Ads
   google_mobile_ads: 5.3.1
