🔒 Add Security Guide and Protect Firebase Admin SDK
✅ Security Improvements:
- Added comprehensive security guide (SECURITY_GUIDE.md)
- Enhanced .gitignore to protect Admin SDK keys
- Documented 3 safe implementation options

🔒 Protected Files:
- *firebase-admin-sdk*.json
- *serviceAccountKey*.json
- .env files with secrets
- All JSON keys in scripts/ai_generation/

📚 Security Guide Contents:
- Admin SDK risks and warnings
- Option 1: Flutter app direct (recommended, no Admin SDK)
- Option 2: Backend script (local only, with .env)
- Option 3: Cloud Functions (production, serverless)

✅ Current Status:
- No Admin SDK keys in git history
- .gitignore properly configured
- Flutter app already works without Admin SDK
- Firebase Security Rules ready to deploy

💡 Recommended Approach:
Use Flutter app directly with Firebase Security Rules
- No Admin SDK needed
- User authentication based
- Already implemented and safe

⚠️ Important:
NEVER upload firebase-admin-sdk.json to GitHub!
Use local environment or Cloud Functions only.

📁 Files:
- SECURITY_GUIDE.md (6KB)
- .gitignore (updated)

--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,17 @@ Thumbs.db
 *.tmp
 *.temp
 
+# 🔒 Security: Firebase Admin SDK Keys (NEVER COMMIT THESE!)
+*firebase-admin-sdk*.json
+*serviceAccountKey*.json
+service-account-key.json
+firebase-adminsdk*.json
+
+# Environment files with secrets
+.env
+.env.local
+scripts/ai_generation/.env
+scripts/ai_generation/*.json
+
 # Keep lib/ directory for source code!
 
